--- a/index.html
+++ b/index.html
@@ -17,29 +17,14 @@
       <section>
         <h2>About me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Hi! I'm Eli Ellsworth. And I'm super swamped with my calculus class and CS235 right now, so I'm doing this quickly. I guess 
+          that's the college life for ya.
         </p>
         <p>
-          Cursus sit amet dictum sit amet justo donec enim. Volutpat blandit
-          aliquam etiam erat velit scelerisque. Vestibulum lorem sed risus
-          ultricies tristique nulla. Amet mattis vulputate enim nulla aliquet
-          porttitor. Tellus integer feugiat scelerisque varius morbi. Et tortor
-          at risus viverra adipiscing at in. Pellentesque habitant morbi
-          tristique senectus et. Donec ac odio tempor orci. At ultrices mi
-          tempus imperdiet nulla malesuada. Pellentesque pulvinar pellentesque
-          habitant morbi tristique senectus. Libero justo laoreet sit amet
-          cursus sit amet. Aliquet lectus proin nibh nisl condimentum. Sit amet
-          massa vitae tortor condimentum lacinia quis vel.
+          So yeah, that's whats up with me right now. 
         </p>
         <p>
-          Personalize this page to what you would like. This is your chance to
-          experiment and show off how awesome you are.
+          
         </p>
       </section>
       <section>
@@ -61,19 +46,19 @@
         <h3>HTML</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/abKYRqN">Introduction</a>
+            <a href="https://codepen.io/Bentalizac/pen/QWBPOgg">Introduction</a>
             - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/GRGBqbw">Structure</a> -
+            <a href="https://codepen.io/Bentalizac/pen/yLqrPKK">Structure</a> -
             All the elements for creating page structure
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/dyVdNej">Input</a> - All
+            <a href="https://codepen.io/Bentalizac/pen/WNKWXyZ">Input</a> - All
             the elements for receiving user input
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/OJEwgBa">Media</a> - All
+            <a href="https://codepen.io/Bentalizac/pen/GRBLOBq">Media</a> - All
             the elements for rendering media objects
           </li>
         </ul>
