--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h2>Start up project</h2>
         <p>
           This is where the description and link to my start up project will go.
+          <a href="startup.cs260coursework.click" >Here's what I've got so far!</a>
         </p>
       </section>
       <section>
@@ -38,11 +39,12 @@
         <p>
           This is where the description and link to my implementation of the
           Simon will go.
+          <a href="simon.cs260coursework.click" >Here's what I've got so far!</a>
         </p>
       </section>
       <section>
         <h2>Web programming assignments</h2>
-        <p>Replace the links below with your CodePen links.</p>
+        
         <h3>HTML</h3>
         <ul>
           <li>
