--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>Start up project</h2>
         <p>
           This is where the description and link to my start up project will go.
-          <a href="startup.cs260coursework.click" >Here's what I've got so far!</a>
+          <a href="startup" >Here's what I've got so far!</a>
         </p>
       </section>
       <section>
@@ -39,7 +39,7 @@
         <p>
           This is where the description and link to my implementation of the
           Simon will go.
-          <a href="simon.cs260coursework.click" >Here's what I've got so far!</a>
+          <a href="simon" >Here's what I've got so far!</a>
         </p>
       </section>
       <section>
