--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   </head>
   <body>
     <header>
-      <h1>Your name</h1>
+      <h1>Eli Ellsworth</h1>
       <img src="profile.jpg" alt="me" />
+      <p> Sorry, I didn't have any decent pictures to include, so here's my usual profile pic.
+        I'll update this later
+      </p>
     </header>
     <main>
       <section>
